--- a/src/public/style/style.css
+++ b/src/public/style/style.css
@@ -4,7 +4,7 @@
     margin: 0;
     box-sizing: border-box;
     outline: none;
-    font-family: "Times New Roman", Times, serif;
+    font-family: 'Times New Roman', Times, serif;
 }
 body {
     display: block;
@@ -51,4 +51,22 @@ body {
     border-bottom: 2px solid grey;
     font-size: 1.5rem;
     color: white;
+    text-align: center;
+}
+
+.toDoValue button {
+    float: right;
+    font-size: 10px;
+    margin: 0 0 0 25px;
+    border-radius: 3px;
+    padding: 5px 5px;
+    color: white;
+    background: #70b3ff;
+    border: 0;
+    cursor: pointer;
+    transition: opacity 0.3s linear;
+}
+
+.toDoValue button:hover {
+    opacity: 0.7;
 }
