--- a/src/public/style/style.css
+++ b/src/public/style/style.css
@@ -70,3 +70,11 @@ body {
 .toDoValue button:hover {
     opacity: 0.7;
 }
+
+.editInput {
+    display: block;
+    margin: auto;
+    text-align: center;
+    padding: 2px 2px;
+    background-color: #9e9e9e;
+}
